springboot-service.yaml
apiVersion: v1
kind: Service   
metadata:
  name: springboot-svc
  labels:
    app: springboot-svc
spec:
  type: LoadBalancer 
  ports:
  - port: 8080 
    targetPort: 8080
  selector:
    app: springboot-app
